# starguard-mobile

./: .cursorrules  .dockerignore  .gitignore  ARCHITECTURE.md  CURSORRULES-STARGUARD-MOBILE.md  DEPLOYMENT.md  Dockerfile  INSTALL-REFERENCE.md  Phase2-to-Hardening-Sprint-Checklist.md  README.md  START_MOBILE.bat  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml  deploy.yml
Artifacts/: .gitignore  DEPLOYMENT.md  Dockerfile  requirements.txt  run.py  run_starguard_mobile.ps1
Artifacts/app/: .gitignore  Dockerfile  README.md  app.py  cloud_status_badge.py  fix_mobile_generate.py  hedis_gap_trail.py  hedis_gap_ui.py  hitl_admin_view.py  intervention_optimizer.py  requirements.txt  star_rating_cache.py  star_rating_cache_ui.py  suppression_banner.py
Artifacts/app/components/: mobile_layout.py
Artifacts/app/pages/: ai_validation.py  care_gap_workflow.py  executive_dashboard.py  hedis_analyzer.py  member_profile.py  model_monitor.py  provider_scorecard.py  risk_stratification.py  roi_portfolio_optimizer.py  star_predictor.py
Artifacts/app/shared/: supabase_findings.py
Artifacts/app/utils/: theme_config.py
Artifacts/app/www/: auditshield_services.html  starguard_about.html  starguard_services.html
app/: __init__.py
app/components/: __init__.py
app/pages/: __init__.py  ai_validation.py  executive_dashboard.py  hedis_analyzer.py  member_profile.py  model_monitor.py  provider_scorecard.py  risk_stratification.py  star_predictor.py
app/utils/: __init__.py  theme_config.py
tests/: test_starguard_mobile.py
