[project]
name = "starguard-mobile"
version = "0.1.0"
description = "StarGuard Mobile — Medicare Advantage Intelligence Platform (Mobile)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "shiny>=0.10.2",
    "shinyswatch>=0.7.0",
    "plotly>=5.18.0",
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "httpx>=0.26.0",
    "gspread>=6.0.0",
    "google-auth>=2.28.0",
    "supabase>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# Entry: Artifacts.app.app:app (shiny run Artifacts.app.app:app)
# Port: 8000

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["Artifacts", "app", "hedis_gap_trail", "cloud_status_badge", "hitl_admin_view", "suppression_banner", "intervention_optimizer", "pages"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
